--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Yusuf Oluwatoki Yusuf</h1>
     <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
