--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 </head>
 <body>
     <h1>Yusuf Oluwatoki Yusuf</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <p> I am a Doctoral Researcher at Tampere University. 
+        I’m passionate about applied mathematics 
+        and currently studying small solar system bodies
+        using FETD-based tomographic full-wave radar imaging. 
+        My work spans various fields, including neuroelectricity, 
+        industrial energy systems, data analytics, and digital twin technology. 
+        I’m eager to connect and collaborate to create real-world solutions.
+        Let’s shape the future together!.</p>
 </body>
 </html>
