--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 </head>
 <body>
     <h1>Yusuf Oluwatoki Yusuf</h1>
-    <p> I am a Doctoral Researcher at Tampere University. 
-        I’m passionate about applied mathematics 
-        and currently studying small solar system bodies
-        using FETD-based tomographic full-wave radar imaging. 
-        My work spans various fields, including neuroelectricity, 
-        industrial energy systems, data analytics, and digital twin technology. 
-        I’m eager to connect and collaborate to create real-world solutions.
-        Let’s shape the future together!.</p>
+    <p> I am a Doctoral Researcher at Tampere University. </p>
+    <p>  I’m passionate about applied mathematics </p>
+      <p>   and currently studying small solar system bodies</p>
+      <p>   using FETD-based tomographic full-wave radar imaging. </p>
+      <p>   My work spans various fields, including neuroelectricity, </p>
+       <p>  industrial energy systems, data analytics, and digital twin technology. </p>
+        <p> I’m eager to connect and collaborate to create real-world solutions.</p>
+        <p> Let’s shape the future together!.</p>
 </body>
 </html>
