--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </style>
 </head>
 <body>
+     <div class="container">
     <h1>Yusuf Oluwatoki Yusuf</h1>
     <p> I am a Doctoral Researcher at Tampere University. </p>
     <p>  I’m passionate about applied mathematics </p>
@@ -33,5 +34,8 @@
        <p>  industrial energy systems, data analytics, and digital twin technology. </p>
         <p> I’m eager to connect and collaborate to create real-world solutions.</p>
         <p> Let’s shape the future together!.</p>
+         </div>
+    <div class="container"></div>
+        
 </body>
 </html>
