--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         }
         h1 {
             color: #333;
-            text-align: center;
+            text-align: justify;
             padding: 20px 0;
         }
         p {
-            text-align: center;
+            text-align: justify;
             font-size: 18px;
             color: #666;
         }
