--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             padding: 10px;
             background-color: #f0f0f0;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: justify;
+            align-items: justify;
             height: 100vh;
         }
         .container {
