--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin: 10px;
             padding: 20px;
-            text-align: center;
+            text-align: justify;
         }
         .container-60 {
             width: calc(60% - 20px);
