--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin: 10px;
             padding: 20px;
-            text-align: justify;
+            text-align: left;
         }
         .container-60 {
             width: calc(60% - 20px);
@@ -31,6 +31,9 @@
         }
         h1 {
             color: #333;
+        }
+        h2 {
+            color: #043;
         }
         p {
             font-size: 18px;
