--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
         }
         h2 {
             color: #043;
+            font-size: 12px;
         }
         p {
             font-size: 18px;
             color: #666;
+        }
+       ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+        }
+    li {
+          padding: 10px 0;
         }
     </style>
 </head>
