--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         }
         h2 {
             color: #043;
-            font-size: 12px;
+            font-size: 16px;
         }
         p {
             font-size: 18px;
             color: #666;
         }
        ul {
-          list-style-type: none;
+          list-style-type: square;
           margin: 0;
           padding: 0;
         }
