--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         }
         .container-40 {
             width: calc(40% - 20px);
+            background-color: #f0f0f0;
         }
         h1 {
             color: #333;
