--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         .container-40 {
             width: calc(40% - 20px);
             background-color: #f0f0f0;
+            border-radius: 0px;
+            box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
         }
         h1 {
             color: #333;
