--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li>Finite Element Methods </li>
          <li>Digital Twin Technology</li>
           <li>Industrial Energy Systems</li>
-          <li>Preventive Data Analytics </li>
+          <li>Predictive § preventive Data Analytics </li>
         </ul>
          
          </div>
