--- a/index.html
+++ b/index.html
@@ -51,10 +51,28 @@
     li {
           padding: 10px 0;
         }
+            .round-frame {
+          border-radius: 50%;
+          width: 200px;
+          height: 200px;
+          overflow: hidden;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        .round-frame img {
+          display: block;
+          max-width: 100%;
+          height: auto;
+        }
     </style>
 </head>
 <body>
-    <div class="container container-40"></div>
+    <div class="container container-40">
+        <div class="round-frame">
+  <img src="yusuf2.png" alt="Description of image">
+</div>
+    </div>
      <div class="container container-60">
     <h1>Yusuf Oluwatoki Yusuf</h1>
     <p> I am a Doctoral Researcher at Tampere University. </p>
