--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          margin: 20px;
+          padding: 10px;
         }
         .round-frame img {
           display: block;
