--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
     <div class="container container-40">
         <div class="round-frame">
   <img src="yusuf2.png" alt="Description of image">
+            <h1>Yusuf Oluwatoki Yusuf</h1>
 </div>
     </div>
      <div class="container container-60">
-    <h1>Yusuf Oluwatoki Yusuf</h1>
+    <h1>About me</h1>
     <p> I am a Doctoral Researcher at Tampere University. </p>
     <p>  I’m passionate about applied mathematics </p>
       <p>   and currently studying small solar system bodies</p>
