--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 
          <h2>Relevant links</h2>
          <ul>
-             <li> </li>
+             <li> <a href="https://www.researchgate.net/profile/Yusuf-Yusuf-10">Researchgate</a> </li>
+              <li> <a href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
          </ul>
          </div>
     
