--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         }
         .container-60 {
             width: calc(60% - 20px);
+            height: 100vh;
         }
         .container-40 {
             width: calc(40% - 20px);
