--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
           margin-bottom: 10px;
         }
         p {
-            font-size: 18px;
+            font-size: 16px;
             color: #666;
+            text-align: justify;
         }
        ul {
           list-style-type: square;
