--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           max-width: 100%;
           height: auto;
         }
+        .underline {
+          text-decoration-line: underline;
+          text-decoration-style: dotted;
+          text-decoration-color: black;
+        }
     </style>
 </head>
 <body>
@@ -104,7 +109,7 @@
           <li>Predictive § Preventive Data Analytics </li>
         </ul>
 
-         <h2>Relevant links</h2>
+         <div> class="underline"> <h2>Relevant links</h2></div>
          <ul>
              <li> <a href="https://www.researchgate.net/profile/Yusuf-Yusuf-10">Researchgate</a> </li>
               <li> <a href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
