--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <li>Predictive § Preventive Data Analytics </li>
         </ul>
 
-         <div> class="underline"> <h2>Relevant links</h2></div>
+         <div class="underline"> <h2>Relevant links</h2>
          <ul>
              <li> <a href="https://www.researchgate.net/profile/Yusuf-Yusuf-10">Researchgate</a> </li>
               <li> <a href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
