--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             background-color: #f0f0f0;
             border-radius: 0px;
             box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
+            justify-content: justify;
+            align-items: justify;
         }
         h1 {
             color: #333;
