--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           align-items: center;
           margin: 40px;
           padding: 20px;
+          margin-top: 20px;
         }
         .round-frame img {
           display: block;
