--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
             justify-content: justify;
             align-items: justify;
+            margin: 10px;
+            padding: 70px;
         }
         h1 {
             color: #333;
