--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
      <div class="container container-60">
     <h2>About me</h2>
     <p> I am a Doctoral Researcher at Tampere University. </p>
-    <p>  I’m passionate about applied mathematics 
-      <br>   and currently studying small solar system bodies</p>
+    <p>  I’m passionate about applied mathematics </p>
+      <p>  and currently studying small solar system bodies</p>
       <p>   using FETD-based tomographic full-wave radar imaging. </p>
       <p>   My work spans various fields, including neuroelectricity, </p>
        <p>  industrial energy systems, data analytics, and digital twin technology. </p>
