--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         .container-60 {
             width: calc(60% - 20px);
             height: 100vh;
+            justify-content: justify;
+            align-items: justify;
         }
         .container-40 {
             width: calc(40% - 20px);
