--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         }
         h1 {
             color: #333;
+            font-family: Cursive;
         }
         h2 {
             color: #043;
