--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
             padding: 70px;
         }
         h1 {
-            color: #333;
+            
+            color: #043;
             font-family: Cursive;
+            <!--color: #333;-->
         }
         h2 {
             color: #043;
