--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         }
     li {
           padding: 10px 0;
+        font-family: Fantasy;
         }
             .round-frame {
           border-radius: 50%;
