--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         }
     li {
           padding: 10px 0;
-        font-family: Fantasy;
-        font-size: 16px;
+        font-family: Fantasy, Copperplate;
+        font-size: 12px;
         }
             .round-frame {
           border-radius: 50%;
