--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         }
     li {
           padding: 10px 0;
-        font-family: Fantasy, Copperplate;
+        font-family: Aclonica;
         font-size: 12px;
         }
             .round-frame {
