--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             font-size: 16px;
             color: #666;
             text-align: justify;
-            font-family: Advent Pro;
+            font-family: Aclonica;
         }
        ul {
           list-style-type: square;
