--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             font-size: 16px;
             color: #666;
             text-align: justify;
-            font-family: Aclonica;
+            font-family: Abel;
         }
        ul {
           list-style-type: square;
@@ -66,8 +66,8 @@
         }
     li {
           padding: 10px 0;
-        font-family: Helvetica;
-        font-size: 12px;
+        font-family: Advent Pro;
+        font-size: 14px;
         }
             .round-frame {
           border-radius: 50%;
