--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             font-size: 16px;
             color: #666;
             text-align: justify;
-            font-family: Abel;
+            font-family: Georgia, serif;
         }
        ul {
           list-style-type: square;
@@ -66,7 +66,7 @@
         }
     li {
           padding: 10px 0;
-        font-family: Advent Pro;
+        font-family: Brush Script MT;
         font-size: 14px;
         }
             .round-frame {
