--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         }
     li {
           padding: 10px 0;
-        font-family: Brush Script MT;
+        font-family: Times New Roman;
         font-size: 14px;
         }
             .round-frame {
