--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         font-family: Times New Roman;
         font-size: 14px;
         }
+        a{
+             color:#666; 
+            }
             .round-frame {
           border-radius: 50%;
           width: 200px;
@@ -124,8 +127,8 @@
 
          <u class="underline"> <h1>Relevant links</h1></u>
          <ul>
-             <li> <a href="https://www.researchgate.net/profile/Yusuf-Yusuf-10">Researchgate</a> </li>
-              <li> <a href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
+             <li> <a  href="https://www.researchgate.net/profile/Yusuf-Yusuf-10">Researchgate</a> </li>
+              <li> <a  href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
          </ul>
          </div>
     
