--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
      <div class="container container-60">
     <h1>About me</h1>
     <p> I am a Doctoral Researcher at Tampere University. </p>
-    <p>  I’m passionate about applied mathematics and currently studying small solar system bodies 
-        using FETD-based tomographic full-wave radar imaging.   My work spans various fields </p>
-         <p>, including neuroelectricity, industrial energy systems, data analytics, and digital twin technology. </p>
+    <p>  I’m passionate about applied mathematics  </p>
+     <p> and currently studying small solar system bodies </p>
+       <p> using FETD-based tomographic full-wave radar imaging. </p>
+       <p> My work spans various fields  including neuroelectricity, </p>
+        <p> industrial energy systems, data analytics, and digital twin technology. </p>
         <p> I’m eager to connect and collaborate to create real-world solutions.</p>
         <p> Let’s shape the future together!.</p>
          
