--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
            
 </div>
          <h1>Yusuf Oluwatoki Yusuf</h1>
+        <a href="mailto:yusuf.yusuf@tuni.fi">
+    <img src="logos/email.jpg" alt="Email Logo">
+</a>
+
     </div>
      <div class="container container-60">
     <h1>About me</h1>
