--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
           padding: 20px;
           margin-top: 80px;
         }
+             .round-frame2 {
+          border-radius: 5%;
+          width: 20px;
+          height: 20px;
+          overflow: hidden;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 40px;
+          padding: 20px;
+          margin-top: 80px;
+        }
         .round-frame img {
           display: block;
           max-width: 100%;
@@ -99,13 +111,10 @@
 <body>
     <div class="container container-40">
         <div class="round-frame">
-  <img src="yusuf2.png" alt="Description of image">
-           
-</div>
+  <img src="yusuf2.png" alt="Description of image"></div>
          <h1>Yusuf Oluwatoki Yusuf</h1>
-        <a href="mailto:yusuf.yusuf@tuni.fi">
-    <img src="logos/email.jpg" alt="Email Logo">
-</a>
+        <div class="round-frame2"><a href="mailto:yusuf.yusuf@tuni.fi">
+    <img src="logos/email.jpg" alt="Email Logo"></a></div>
 
     </div>
      <div class="container container-60">
