--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           padding: 20px;
           margin-top: 80px;
         }
-             .round-frame2 {
+            .round-frame2 {
           border-radius: 5%;
           width: 20px;
           height: 20px;
@@ -101,6 +101,11 @@
           max-width: 100%;
           height: auto;
         }
+            .round-frame2 img {
+          display: block;
+          max-width: 100%;
+          height: 100%;
+            }
         .underline {
           text-decoration-line: underline;
           text-decoration-style: dotted;
@@ -112,8 +117,10 @@
     <div class="container container-40">
         <div class="round-frame">
   <img src="yusuf2.png" alt="Description of image"></div>
-         <h1>Yusuf Oluwatoki Yusuf</h1>
-        <div class="round-frame2"><a href="mailto:yusuf.yusuf@tuni.fi">
+        
+  <h1>Yusuf Oluwatoki Yusuf</h1>
+        
+    <div class="round-frame2"><a href="mailto:yusuf.yusuf@tuni.fi">
     <img src="logos/email.jpg" alt="Email Logo"></a></div>
 
     </div>
