--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
           height: auto;
         }
             .round-frame2 img {
-          display: block;
-          max-width: 100%;
+          width: 100%;
           height: 100%;
             }
         .underline {
