--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         }
             .round-frame2 {
           border-radius: 5%;
-          width: 20px;
-          height: 20px;
+          width: 40px;
+          height: 40px;
           overflow: hidden;
           display: flex;
           justify-content: center;
@@ -120,7 +120,9 @@
   <h1>Yusuf Oluwatoki Yusuf</h1>
         
     <div class="round-frame2"><a href="mailto:yusuf.yusuf@tuni.fi">
-    <img src="logos/email.jpg" alt="Email Logo"></a></div>
+    <img src="logos/email.jpg" alt="Email Logo"></a> 
+             <li> <a href="mailto:yusuf.yusuf@tuni.fi">Email</a> </li>
+    </div>
 
     </div>
      <div class="container container-60">
