--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
   <h1>Yusuf Oluwatoki Yusuf</h1>
         
     <div class="round-frame2"><a href="mailto:yusuf.yusuf@tuni.fi">
-    <img src="logos/email.jpg" alt="Email Logo"></a> 
-             <li> <a href="mailto:yusuf.yusuf@tuni.fi">Email</a> </li>
-    </div>
+    <img src="logos/email.jpg" alt="Email Logo"></a> </div>  <a href="mailto:yusuf.yusuf@tuni.fi">Email</a>
 
     </div>
+    
      <div class="container container-60">
     <h1>About me</h1>
     <p> I am a Doctoral Researcher at Tampere University. </p>
