--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <h1>Yusuf Oluwatoki Yusuf</h1>
     <div class="round-frame">
     <div class="round-frame2"><a href="mailto:yusuf.yusuf@tuni.fi">
-    <img src="logos/email.jpg" alt="Email Logo"></a> </div>  <a href="mailto:yusuf.yusuf@tuni.fi">Email</a>
+    <img src="logos/email.jpg" alt="Email Logo">Email</a> </div>  <a href="mailto:yusuf.yusuf@tuni.fi">Email</a>
      </div></div>
     
      <div class="container container-60">
