--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <img src="yusuf2.png" alt="Description of image"></div>
         
   <h1>Yusuf Oluwatoki Yusuf</h1>
-    <div class="round-frame">
+    <div class="round-frame2">
      <img src ="logos/email.jpg"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></div>
         
     </div>
