--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         }
         a{
              color:#666; 
-            }
+             text-decoration: none;
+        }
             .round-frame {
           border-radius: 50%;
           width: 200px;
