--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         
   <h1>Yusuf Oluwatoki Yusuf</h1>
     <div class="round-frame2">
-     <img src ="logos/location.jpg">Email</div>
+     <img src ="logos/location.jpg">Tampere, Finland.</div>
     <div class="round-frame2">
      <img src ="logos/email.jpg"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></div>
     </div>
