--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
   <img src="yusuf2.png" alt="Description of image"></div>
         
   <h1>Yusuf Oluwatoki Yusuf</h1>
-    <div class="round-frame2">
-     <p><img src ="logos/location.jpg"> Tampere Finland.</p></div>
-    <div class="round-frame2">
-     <img src ="logos/email.jpg"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></div>
+      <ul>
+             <li>  <div class="round-frame2"> <img src ="logos/email.jpg"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></div></li>
+              <li> <a  href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
+         </ul>
     </div>
     
      <div class="container container-60">
