--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         .container-60 {
             width: calc(60% - 20px);
-            height: 100vh;
+            height: auto;
             justify-content: justify;
             align-items: justify;
         }
