--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
           margin: 0;
           padding: 0;
         }
+         ol {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+        }
     li {
           padding: 10px 0;
         font-family: Times New Roman;
