--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
             margin: 10px;
             padding: 20px;
             text-align: left;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+
+        .scrollable-content {
+          flex: 1 1 auto;
+          overflow: auto;
+        }
+
         }
         .container-60 {
             width: calc(60% - 20px);
-            height: auto;
+            height: calc(100% - 50px);
             justify-content: justify;
             align-items: justify;
         }
