--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         
   <h1>Yusuf Oluwatoki Yusuf</h1>
       <ol>
-             <li>   <img src ="logos/email.jpg"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></div></li>
+             <li>   <img src ="logos/email.jpg" style="height: 1em;"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></div></li>
               <li> <a  href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
          </ol>
     </div>
