--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         
   <h1>Yusuf Oluwatoki Yusuf</h1>
       <ol>
-             <li>   <img src ="logos/email.jpg" style="height: 1em;"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></div></li>
-              <li> <a  href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
+             <li>   <img src ="logos/location.jpg" style="height: 1em;">Tampere</li>
+              <li>  <img src ="logos/email.jpg" style="height: 1em;"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></li>
          </ol>
     </div>
     
