--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
         .container-60 {
             width: calc(60% - 20px);
-            height: calc(100% - 50px);
+            height: calc(100% + 50px);
             justify-content: justify;
             align-items: justify;
         }
@@ -45,9 +45,10 @@
             border-radius: 0px;
             box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
             justify-content: justify;
-            align-items: justify;
+            align-items: center;
             margin: 10px;
             padding: 70px;
+            text-align: center;
         }
         h1 {
             
