--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
       <ol>
              <li>   <img src ="logos/location.jpg" style="height: 1em;">Tampere</li>
               <li>  <img src ="logos/email.jpg" style="height: 1em;"><a href="mailto:yusuf.yusuf@tuni.fi">Email</a></li>
+              <li>  <img src ="logos/Linkedin.png" style="height: 1em;"><a href="https://www.linkedin.com/in/yusuf-oluwatoki-yusuf-38660689/">LinkedIn</a></li>
+              <li>  <img src ="logos/github.png" style="height: 1em;"><a href="https://github.com/Yusuf-Oluwatoki">Github</a></li>
          </ol>
     </div>
     
