--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
         .container-60 {
             width: calc(60% - 20px);
-            height: calc(100% + 50px);
+            height: calc(100% - 5px);
             justify-content: justify;
             align-items: justify;
         }
