--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             margin: 10px;
             padding: 20px;
             text-align: left;
+            display: flex;
+            flex-direction: column;
             height: 100%;
         }
 
