--- a/index.html
+++ b/index.html
@@ -166,7 +166,11 @@
               <li> <a  href="https://scholar.google.com/citations?user=0541SwsAAAAJ&hl=en&oi=ao">Google scholar</a> </li>
          </ul>
          </div>
-    
+    <footer>
+  <div class="sitemap">
+   <p>Updated January, 2024</p>
+  </div>
+</footer>
         
 </body>
 </html>
