--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
           text-decoration-style: dotted;
           text-decoration-color: black;
         }
+        .sitemap {
+            background-color: #f8f9fa;
+            padding: 20px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -168,6 +173,7 @@
          </div>
     <footer>
   <div class="sitemap">
+      <h2>Sitemap</h2>
    <p>Updated January, 2024</p>
   </div>
 </footer>
