--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             text-align: left;
             display: flex;
             flex-direction: column;
-            height: calc(100% - 15px);
+            height: 100%;
         }
 
 
