--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
 
         }
-        .container-60 {
-            width: calc(60% - 20px);
-            height: calc(100% - 15px);
+        .container-70 {
+            width: calc(70% - 20px);
+            height: 100%;
             justify-content: justify;
             align-items: justify;
         }
-        .container-40 {
-            width: calc(40% - 20px);
+        .container-30 {
+            width: calc(30% - 20px);
             background-color: #f0f0f0;
             border-radius: 0px;
             box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
@@ -131,7 +131,7 @@
     </style>
 </head>
 <body>
-    <div class="container container-40">
+    <div class="container container-30">
         <div class="round-frame">
   <img src="yusuf2.png" alt="Description of image"></div>
         
@@ -144,7 +144,7 @@
          </ol>
     </div>
     
-     <div class="container container-60">
+     <div class="container container-70">
     <h1>About me</h1>
     <p> I am a Doctoral Researcher at Tampere University. </p>
     <p>  I’m passionate about applied mathematics  </p>
